# swagger.json
@@ -51,7 +51,13 @@
                 "name": {
                   "example": "any"
                 },
+                "brand": {
+                  "example": "any"
+                },
                 "price": {
+                  "example": "any"
+                },
+                "storage": {
                   "example": "any"
                 }
               }
@@ -106,7 +112,158 @@
                 "name": {
                   "example": "any"
                 },
+                "brand": {
+                  "example": "any"
+                },
                 "price": {
+                  "example": "any"
+                },
+                "storage": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/brands/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "founded": {
+                  "example": "any"
+                },
+                "ceo": {
+                  "example": "any"
+                },
+                "headquarters": {
+                  "example": "any"
+                },
+                "website": {
+                  "example": "any"
+                },
+                "marketValue": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/brands/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "country": {
+                  "example": "any"
+                },
+                "founded": {
+                  "example": "any"
+                },
+                "ceo": {
+                  "example": "any"
+                },
+                "headquarters": {
+                  "example": "any"
+                },
+                "website": {
+                  "example": "any"
+                },
+                "marketValue": {
                   "example": "any"
                 }
               }
